graph save function added

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -155,12 +155,27 @@
     "layers = {}\n",
     "net_layout = sorted(set([sub.GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot') for sub in subs]))\n",
     "for l in net_layout:\n",
+    "    print(l)\n",
     "    layers[l] = []\n",
     "    for s in subs: \n",
     "        if s.GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot') == l:\n",
     "            layers[l].append(s.loc_name)\n",
     "layers\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print(subs[2].loc_name)\n",
+    "#print(subs[2].GetAttribute('e:pBusbar'))\n",
+    "#subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
+    "lines[0].loc_name"
    ]
   },
   {
@@ -233,6 +248,72 @@
    "outputs": [],
    "source": [
     "feeded_check(subs)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graphic Save\n",
+    "\n",
+    "This saves a graphic of grid and geolocation visualization. The name is given as input(figname) and the resulting images are under graphics/Exercise/RES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "project_folder_in_PF = app.GetProjectFolder('netmod')\n",
+    "graphic_board_folder = project_folder_in_PF.GetContents()[0].GetContents()\n",
+    "\n",
+    "\n",
+    "grid = [i for i in graphic_board_folder if 'Grid' in i.loc_name][0]\n",
+    "geo = [i for i in graphic_board_folder if 'Geographical' in i.loc_name][0]\n",
+    "\n",
+    "\n",
+    "def get_graphic(figname, boards=[grid,geo]):\n",
+    "\n",
+    "    def project_new_folder(graph_path, grid_name,date_and_time,figname):\n",
+    "        new_path = graph_path+'/ '+grid_name\n",
+    "        if not os.path.exists(new_path):\n",
+    "            os.makedirs(new_path)\n",
+    "        graphic_object = app.GetFromStudyCase('SetDesktop')\n",
+    "        filename = os.path.join(new_path, date_and_time)\n",
+    "        res = graphic_object.WriteWMF(filename)\n",
+    "        img = PythonMagick.Image()\n",
+    "        img.density(\"125\")\n",
+    "        img.read(filename + \".wmf\")\n",
+    "        img.write(os.path.join(new_path, figname + \"-\"+ date_and_time + \".png\")) # or .jpg\n",
+    "\n",
+    "    #graph_path = r'C:\\Users\\.........'\n",
+    "    graph_path = r'graphics/Exercise/RES'\n",
+    "    project_name = app.GetActiveProject().loc_name\n",
+    "    new_path = graph_path +'/ '+ project_name\n",
+    "    if not os.path.exists(new_path):\n",
+    "        os.makedirs(new_path)\n",
+    "\n",
+    "    for key in boards:\n",
+    "        key.Show()\n",
+    "        this_graphic = key.loc_name\n",
+    "        graph_name = key.loc_name\n",
+    "        sim_dt_time = time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(time.time()))\n",
+    "        usable_time = sim_dt_time.replace(':', '.')\n",
+    "        project_new_folder(new_path, graph_name , usable_time, figname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "get_graphic(\"aha\")"
    ]
   }
  ],
