incidence matrix is created

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,12 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "import powerfactory as pf\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -112,11 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "load_flow_class.Execute()"
@@ -133,23 +156,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To-Do: Build Incidence Matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example Code"
+    "### Example Code\n",
+    "\n",
+    "Since there is no duplicates in the result set, we conclude that this network is radial. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{2: ['Trafo Substation(1)',\n",
+       "  'Trafo Substation(4)',\n",
+       "  'Trafo Substation(9)',\n",
+       "  'Trafo Substation(16)',\n",
+       "  'Trafo Substation(28)',\n",
+       "  'Trafo Substation(29)'],\n",
+       " 3: ['Trafo Substation(3)',\n",
+       "  'Trafo Substation(7)',\n",
+       "  'Trafo Substation(11)',\n",
+       "  'Trafo Substation(23)',\n",
+       "  'Trafo Substation(21)',\n",
+       "  'Trafo Substation(27)',\n",
+       "  'Trafo Substation(2)'],\n",
+       " 4: ['Trafo Substation(14)',\n",
+       "  'Trafo Substation(18)',\n",
+       "  'Trafo Substation(25)',\n",
+       "  'Trafo Substation(26)']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "app.GetFromStudyCase('ComLdf').Execute()\n",
     "layers = {}\n",
@@ -175,7 +230,170 @@
     "#print(subs[2].loc_name)\n",
     "#print(subs[2].GetAttribute('e:pBusbar'))\n",
     "#subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
-    "lines[0].loc_name"
+    "for sub in subs:\n",
+    "    print(sub.loc_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Incidence Matrix\n",
+    "Here we are building the instance matrix manually.\n",
+    "\n",
+    "The convention from the supplied example image is used:\n",
+    " - Branch number is the number of the corresponding node, which has the incoming connection. For example, 1 -> 2 means, 1 connects to 2, so the branch number is 2.\n",
+    " \n",
+    "Size of the matrix is 1 + 5 + 17 = 23. \n",
+    " - 1 stands for the root 63 kV station\n",
+    " - 5 for 20 kV substations\n",
+    " - 17 for the trafo substations.\n",
+    "\n",
+    "Here, we are configuring matrix as follows, first column is for the root node, next 5 columns are for the 20 kV substations and last 17 columns are for trafo substations.  \n",
+    "So when we are refering the first trafo substation, corresponding index is calculated as follows:\n",
+    "\n",
+    "1(root) + 5(20 kV stations) + 1(index we want) - 1(indexing starts from 0)\n",
+    "\n",
+    "\n",
+    "#### Indexes for the Trafo substations\n",
+    "We need this correction, since ids of substations have gaps, so they are aligned for more compact incidence matrix.\n",
+    "\n",
+    "Trafo Substation(1) -> 1\n",
+    "\n",
+    "Trafo Substation(2) -> 2\n",
+    "\n",
+    "Trafo Substation(3) -> 3\n",
+    "\n",
+    "Trafo Substation(4) -> 4\n",
+    "\n",
+    "Trafo Substation(7) -> 5\n",
+    "\n",
+    "Trafo Substation(9) -> 6\n",
+    "\n",
+    "Trafo Substation(11)-> 7\n",
+    "\n",
+    "Trafo Substation(14)-> 8\n",
+    "\n",
+    "Trafo Substation(16)-> 9\n",
+    "\n",
+    "Trafo Substation(18)-> 10\n",
+    "\n",
+    "Trafo Substation(21)-> 11\n",
+    "\n",
+    "Trafo Substation(23)-> 12\n",
+    "\n",
+    "Trafo Substation(25)-> 13\n",
+    "\n",
+    "Trafo Substation(26)-> 14\n",
+    "\n",
+    "Trafo Substation(27)-> 15\n",
+    "\n",
+    "Trafo Substation(28)-> 16\n",
+    "\n",
+    "Trafo Substation(29)-> 17\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0.  1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -1. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0.  1.]\n",
+      " [-0.  1. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1.  1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0.  1. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -1. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -1. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -1.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -1. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -1. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -1. -0.  1.]\n",
+      " [-0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -1. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "incidence_mat = np.identity(1 + 5 + 17) * -1\n",
+    "\n",
+    "# 20 kV substations \n",
+    "incidence_mat[1 + 1 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 2 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 3 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 4 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 5 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "\n",
+    "\n",
+    "# Trafo substations\n",
+    "incidence_mat[1 + 5 + 1 - 1,1 + 2 - 1] = 1 #first trafo substation, gets the electricity from 2nd 20 kV subst.\n",
+    "incidence_mat[1 + 5 + 2 - 1,1 + 5 + 4 - 1] = 1 # trafo 4 -> trafo 2\n",
+    "incidence_mat[1 + 5 + 3 - 1,1 + 5 + 17 - 1] = 1 # trafo 29(index 17) -> trafo 3\n",
+    "incidence_mat[1 + 5 + 4 - 1,1 + 1 - 1] = 1 # 20 kV(1) -> trafo 4\n",
+    "incidence_mat[1 + 5 + 5 - 1,1 + 5 + 6 - 1] = 1 # trafo 9(index 6) -> trafo 7(index 5)\n",
+    "incidence_mat[1 + 5 + 6 - 1,1 + 4 - 1] = 1 # 20 kV(4) -> trafo 9(index 6)\n",
+    "incidence_mat[1 + 5 + 7 - 1,1 + 5 + 16 - 1] = 1 # trafo 28(index 16) -> trafo 11(index 7)\n",
+    "incidence_mat[1 + 5 + 8 - 1,1 + 5 + 7 - 1] = 1 # trafo 11(index 7) -> trafo 14(index 8)\n",
+    "incidence_mat[1 + 5 + 9 - 1,1 + 3 - 1] = 1 # 20 kV(3) -> trafo 16(index 9)\n",
+    "incidence_mat[1 + 5 + 10 - 1,1 + 5 + 5 - 1] = 1 # trafo 7(index 5) -> trafo 18(index 10)\n",
+    "incidence_mat[1 + 5 + 11 - 1,1 + 5 + 1 - 1] = 1 # trafo 1(index 1) -> trafo 21(index 11)\n",
+    "incidence_mat[1 + 5 + 12 - 1,1 + 5 + 4 - 1] = 1 # trafo 4(index 4) -> trafo 23(index 12)\n",
+    "incidence_mat[1 + 5 + 13 - 1,1 + 5 + 2 - 1] = 1 # trafo 2(index 2) -> trafo 25(index 13)\n",
+    "incidence_mat[1 + 5 + 14 - 1,1 + 5 + 5 - 1] = 1 # trafo 7(index 5) -> trafo 26(index 14)\n",
+    "incidence_mat[1 + 5 + 15 - 1,1 + 5 + 17 - 1] = 1 # trafo 29(index 17) -> trafo 27(index 15)\n",
+    "incidence_mat[1 + 5 + 16 - 1,1 + 5 - 1] = 1 # 20 kV(5) -> trafo 28(index 16)\n",
+    "incidence_mat[1 + 5 + 17 - 1,1 + 3 - 1] = 1 # 20 kV(3) -> trafo 29(index 17)\n",
+    "\n",
+    "np.set_printoptions(threshold=np.nan)\n",
+    "print(incidence_mat)\n",
+    "np.set_printoptions(threshold=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4"
    ]
   },
   {
