Now we can try different configurations. Code is ready

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,11 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import powerfactory as pf\n",
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -113,11 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "load_flow_class.Execute()"
@@ -163,17 +185,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(1).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(3).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(4).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(7).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(9).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(11).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(14).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(16).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(18).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(23).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(21).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(25).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(26).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(27).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(28).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(29).ElmTrfstat</l3>\n",
+      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(2).ElmTrfstat</l3>\n"
+     ]
+    }
+   ],
    "source": [
     "#print(subs[2].loc_name)\n",
     "#print(subs[2].GetAttribute('e:pBusbar'))\n",
     "#subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
     "for sub in subs:\n",
-    "    print(sub.loc_name)"
+    "    print(sub)"
    ]
   },
   {
@@ -247,11 +293,11 @@
     "incidence_mat = np.identity(1 + 5 + 17) * -1\n",
     "\n",
     "# 20 kV substations \n",
-    "incidence_mat[1 + 1 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
-    "incidence_mat[1 + 2 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
-    "incidence_mat[1 + 3 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
-    "incidence_mat[1 + 4 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
-    "incidence_mat[1 + 5 - 1,1 - 1] = 1 #first 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 1 - 1,1 - 1] = 1 #1st 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 2 - 1,1 - 1] = 1 #2nd 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 3 - 1,1 - 1] = 1 #3rd 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 4 - 1,1 - 1] = 1 #4th 20 kV substation, gets the electricity from root\n",
+    "incidence_mat[1 + 5 - 1,1 - 1] = 1 #5th 20 kV substation, gets the electricity from root\n",
     "\n",
     "\n",
     "# Trafo substations\n",
@@ -312,12 +358,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Useful Functions Provided"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Radiality Check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -334,11 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## just to check if the normal \n",
     "radiality_check(feeders)[0]   "
@@ -353,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -371,13 +435,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feeded_check(subs)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    def total_losses(lines):   \n",
+    "        losses = 0\n",
+    "        for line in lines:\n",
+    "            losses += line.GetAttribute('c:Losses')\n",
+    "        return(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.888602217698068"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_losses(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To-Do: Find different scenarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(True, None)\n",
+      "14.364221207753435\n"
+     ]
+    }
+   ],
+   "source": [
+    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(9)']}\n",
+    "print(feeded_check(subs))\n",
+    "for sce_key in scenarios.keys():\n",
+    "    for line in lines:\n",
+    "        if  not line.loc_name in scenarios[sce_key ]:\n",
+    "            line.SwitchOn()\n",
+    "        else:\n",
+    "            line.SwitchOff()\n",
+    "    app.GetFromStudyCase('ComLdf').Execute()\n",
+    "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
+    "    print(total_losses(lines))\n",
+    "    \n",
+    "    "
    ]
   },
   {
