--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -517,8 +517,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(True, None)\n",
-      "14.364221207753435\n"
+      "(False, 'Trafo Substation(16) Is not energized')\n",
+      "losses14.364221207753435\n",
+      "radial(True, None)\n",
+      "all feeded(False, 'Trafo Substation(16) Is not energized')\n"
      ]
     }
    ],
@@ -532,9 +534,12 @@
     "        else:\n",
     "            line.SwitchOff()\n",
     "    app.GetFromStudyCase('ComLdf').Execute()\n",
+    "    subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
     "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
-    "    print(total_losses(lines))\n",
-    "    \n",
+    "    feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
+    "    print(\"losses\" + str(total_losses(lines)))\n",
+    "    print(\"radial\" + str(radiality_check(feeders)))\n",
+    "    print(\"all feeded\" + str(feeded_check(subs)))\n",
     "    "
    ]
   },
