support code added for the exercise 4.3. Graphic extraction

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -37,22 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import powerfactory as pf\n",
@@ -82,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -124,22 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "load_flow_class.Execute()"
@@ -185,35 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(1).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(3).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(4).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(7).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(9).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(11).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(14).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(16).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(18).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(23).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(21).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(25).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(26).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(27).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(28).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(29).ElmTrfstat</l3>\n",
-      "<l3>\\xoxgur.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(2).ElmTrfstat</l3>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print(subs[2].loc_name)\n",
     "#print(subs[2].GetAttribute('e:pBusbar'))\n",
@@ -370,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -387,22 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## just to check if the normal \n",
     "radiality_check(feeders)[0]   "
@@ -417,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -435,22 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "feeded_check(subs)[0]"
    ]
@@ -464,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -479,68 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.888602217698068"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_losses(lines)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## To-Do: Find different scenarios"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(False, 'Trafo Substation(16) Is not energized')\n",
-      "losses14.364221207753435\n",
-      "radial(True, None)\n",
-      "all feeded(False, 'Trafo Substation(16) Is not energized')\n"
-     ]
-    }
-   ],
-   "source": [
-    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(9)']}\n",
-    "print(feeded_check(subs))\n",
-    "for sce_key in scenarios.keys():\n",
-    "    for line in lines:\n",
-    "        if  not line.loc_name in scenarios[sce_key ]:\n",
-    "            line.SwitchOn()\n",
-    "        else:\n",
-    "            line.SwitchOff()\n",
-    "    app.GetFromStudyCase('ComLdf').Execute()\n",
-    "    subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
-    "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
-    "    feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
-    "    print(\"losses\" + str(total_losses(lines)))\n",
-    "    print(\"radial\" + str(radiality_check(feeders)))\n",
-    "    print(\"all feeded\" + str(feeded_check(subs)))\n",
-    "    "
    ]
   },
   {
@@ -599,14 +476,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To-Do: Find different scenarios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "get_graphic(\"aha\")"
+    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(9)']}\n",
+    "print(feeded_check(subs))\n",
+    "for sce_key in scenarios.keys():\n",
+    "    for line in lines:\n",
+    "        if  not line.loc_name in scenarios[sce_key ]:\n",
+    "            line.SwitchOn()\n",
+    "        else:\n",
+    "            line.SwitchOff()\n",
+    "    app.GetFromStudyCase('ComLdf').Execute()\n",
+    "    subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
+    "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
+    "    feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
+    "    print(\"losses\" + str(total_losses(lines)))\n",
+    "    print(\"radial\" + str(radiality_check(feeders)))\n",
+    "    print(\"all feeded\" + str(feeded_check(subs)))\n",
+    "    ## get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
+    "    # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
    ]
   }
  ],
