added a fucntion for trying configurations

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -51,6 +49,8 @@
     "import PythonMagick\n",
     "from IPython.display import Image\n",
     "import time\n",
+    "from collections import OrderedDict\n",
+    "from operator import itemgetter\n",
     "app = pf.GetApplication()\n",
     "app.ActivateProject('LabPowerFactory')"
    ]
@@ -94,7 +94,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -114,9 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -143,7 +141,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -164,14 +161,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#print(subs[2].loc_name)\n",
-    "#print(subs[2].GetAttribute('e:pBusbar'))\n",
-    "#subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
+    "print(subs[2].loc_name)\n",
+    "\n",
+    "subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
     "for sub in subs:\n",
     "    print(sub)"
    ]
@@ -238,9 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -292,13 +285,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "is_radial =  incidence_mat.sum(1).max() == 0.0\n",
     "print(is_radial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(feeders)\n",
+    "feeders[0].ciRadial\n"
    ]
   },
   {
@@ -342,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## just to check if the normal \n",
@@ -379,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "feeded_check(subs)[0]"
@@ -412,13 +409,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "total_losses(lines)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -485,29 +478,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(9)']}\n",
-    "print(feeded_check(subs))\n",
-    "for sce_key in scenarios.keys():\n",
-    "    for line in lines:\n",
-    "        if  not line.loc_name in scenarios[sce_key ]:\n",
-    "            line.SwitchOn()\n",
-    "        else:\n",
-    "            line.SwitchOff()\n",
-    "    app.GetFromStudyCase('ComLdf').Execute()\n",
-    "    subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
-    "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
-    "    feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
-    "    print(\"losses\" + str(total_losses(lines)))\n",
-    "    print(\"radial\" + str(radiality_check(feeders)))\n",
-    "    print(\"all feeded\" + str(feeded_check(subs)))\n",
-    "    ## get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
-    "    # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
+    "def try_scenarios(lines):\n",
+    "    scenarios = OrderedDict()\n",
+    "    scenarios['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "    scenarios['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "    scenarios['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
+    "    scenarios['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "    scenarios['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "\n",
+    "    loss_dict = OrderedDict() #result_table\n",
+    "\n",
+    "    #print(feeded_check(subs))\n",
+    "    for sce_key, value in scenarios.items():\n",
+    "        for line in lines:\n",
+    "            if  not line.loc_name in scenarios[sce_key]:\n",
+    "                line.SwitchOn()\n",
+    "            else:\n",
+    "                line.SwitchOff()\n",
+    "        app.GetFromStudyCase('ComLdf').Execute()\n",
+    "        subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
+    "        lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
+    "        feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
+    "        loss_dict[sce_key] = total_losses(lines)\n",
+    "        \"\"\" #uncomment string for debugging\n",
+    "        print(\"losses \" + str(total_losses(lines)))\n",
+    "        print(\"radial \" + str(radiality_check(feeders)))\n",
+    "        print(\"all feeded \" + str(feeded_check(subs)))\n",
+    "        \"\"\"\n",
+    "    loss_sorted = OrderedDict(sorted(loss_dict.items(), key = itemgetter(1), reverse = False))\n",
+    "    return loss_sorted\n",
+    "        #get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
+    "        # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try_scenarios(lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
